2009-09-08 Ozan Çağlayan <ozan@pardus.org.tr>
		* pisi/specfile.py (read_translations): Fix matching of translations
		against sub-packages.

2009-08-23 Fatih Aşıcı <fatih@pardus.org.tr>
		* Normalize target paths of symbolic links. Fixes #10976.

2009-08-22 Fatih Aşıcı <fatih@pardus.org.tr>
		* Add optional destDir parameter to pisitools.dohtml as
		pisitools.dodoc supports.

2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>
		* (pisi/util.py): Revert kernel module stripping for now as it's not
		tested well.

2009-08-14 Serdar Dalgıç <dalgic.srdr@gmail.com>
        * tarZ support for archives

2009-08-12 Jérôme Schneider <jerome.schneider@gmail.com>
		* Advanced search parameters added. pisi can now search only by name, summary
                or description of a package.

2009-08-11 Serdar Dalgıç <dalgic.srdr@gmail.com>
		* (cli/build.py): pisi build command now works in debug mode unless -q
		or --quiet parameter is passed.

2009-08-07 Ozan Çağlayan <ozan@pardus.org.tr>
		* (pisi/util.py): Strip kernel and modules as well as other binaries to build
		dbginfo packages for them.

2009-08-04 Ozan Çağlayan <ozan@pardus.org.tr>
		* (operations/build.py): Really fix the abandoned file checking when
		the path in pspec.xml and the actual path of a missed file intersects,
		* (operations/build.py): Check and fail if necessary for abandoned files before creating the
		*.pisi packages.

2009-08-03 Fatih Aşıcı <fatih@pardus.org.tr>
		* Make it possible to specify doc directory's name via destDir
		parameter provided to pisitools.dodoc.

2009-06-30 Onur Küçük <onur@pardus.org.tr>
		* Change default make job number from 1 to 3 in pisi defaults,
		sometimes it is forgotten and we need to see parallel build errors

2009-06-26 Fatih Aşıcı <fatih@pardus.org.tr>
		* Pass relative paths of patches to quilt. This makes the
		patches directory have the same structure as the files
		directory of package.

2009-06-16 Fatih Aşıcı <fatih@pardus.org.tr>
		* Fix resetting of the environment.