@@ -1,3 +1,7 @@
+2009-09-16 Ozan Çağlayan <ozan@pardus.org.tr>
+		* pisi/archive.py (ArchiveBzip2): Implement ArchiveBzip2 to support
+		.bz2 archive files.
+
 2009-09-08 Ozan Çağlayan <ozan@pardus.org.tr>
 		* pisi/specfile.py (read_translations): Fix matching of translations
 		against sub-packages.
